Added multi processing definition

--- a/books/1. Terminology.ipynb
+++ b/books/1. Terminology.ipynb
@@ -9,7 +9,7 @@
     "- **Concurrency**\n",
     "- **Parallelism** \n",
     "- **Asynchrony**\n",
-    "- **Multithreading**\n",
+    "- **Multi-threading** & Multiprocessing\n",
     "\n",
     "\n",
     "## Concurrency\n",
@@ -41,10 +41,16 @@
     "\n",
     "[stackoverflow](https://stackoverflow.com/a/4844774/2319865)\n",
     "\n",
-    "## Multithreading\n",
+    "## Multi-threading\n",
     "> a technique by which a single set of code can be used by several processors at different stages of execution.\n",
     "\n",
     "[google definitions](https://www.google.com/search?q=what+is+multithreading)\n",
+    "\n",
+    "## Multiprocessing\n",
+    "> the running of two or more programs or sequences of instructions simultaneously by a computer with more than one central processor.  \n",
+    "This is very similar to multi-threading, however in this case your OS is responsible for distributing load as opposed to the Process running the application.  \n",
+    "\n",
+    "[google definitions](https://www.google.com/search?q=what+is+multiprocessing)\n",
     "\n",
     "## Summary\n",
     "\n",
