--- a/books/2. TS async Promise example.ipynb
+++ b/books/2. TS async Promise example.ipynb
@@ -22,7 +22,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -37,7 +37,7 @@
             "source": [
                 "import { waitFor } from \"./helpfiles/Wait\";\n",
                 "\n",
-                "async function waitingExample() : Promise<void>\n",
+                "async function waitingExample(): Promise<void>\n",
                 "{\n",
                 "    console.log(\"Start of method\");\n",
                 "    await waitFor(600);\n",
@@ -66,7 +66,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -82,7 +82,7 @@
                 "function waitingExampleA()\n",
                 "{\n",
                 "    console.log(\"Start of method\");\n",
-                "    setTimeout(waitingExampleB, 600);\n",
+                "    setTimeout(() => waitingExampleB(), 600);\n",
                 "} \n",
                 "\n",
                 "function waitingExampleB()\n",
@@ -104,7 +104,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
