--- a/books/5. Threading.ipynb
+++ b/books/5. Threading.ipynb
@@ -31,9 +31,11 @@
     "So how does that look functionally?  \n",
     "<div>\n",
     "    <figure style=\"margin: 0;\">\n",
-    "        <img style=\"margin: 0;\"\n",
-    "            src=\"./images/dotnetos-async_thereisnothread.png\" alt=\"IO completion port example\" \n",
-    "            width=\"561\" height=\"396.5\"/>  \n",
+    "        <iframe src=\"https://docs.google.com/viewer? \n",
+    "            url=https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf&embedded=true\"\n",
+    "            frameborder=\"0\" alt=\"IO completion port example\" \n",
+    "            width=\"561\" height=\"396.5\">\n",
+    "        </iframe>\n",
     "        <figcaption>\n",
     "            Source: <a href=\"https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf\">https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf</a>\n",
     "        </figcaption>\n",
@@ -43,6 +45,11 @@
     "As this example illustrates, your task doesn't really spawn any new threads when using IO, it just schedules it to continue at a later stage.  \n",
     "And it doesn't care on which thread this happens.  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
