--- a/books/5. Threading.ipynb
+++ b/books/5. Threading.ipynb
@@ -31,11 +31,11 @@
     "So how does that look functionally?  \n",
     "<div>\n",
     "    <figure style=\"margin: 0;\">\n",
-    "        <object src=\"https://docs.google.com/viewer? \n",
+    "        <embed src=\"https://docs.google.com/viewer? \n",
     "            url=https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf&embedded=true\"\n",
     "            frameborder=\"0\" alt=\"IO completion port example\" \n",
     "            width=\"561\" height=\"396.5\">\n",
-    "        </object>\n",
+    "        </embed>\n",
     "        <figcaption>\n",
     "            Source: <a href=\"https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf\">https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf</a>\n",
     "        </figcaption>\n",
