--- a/books/5. Threading.ipynb
+++ b/books/5. Threading.ipynb
@@ -28,38 +28,73 @@
     "There is a lot more to this, but I don't think it's immediately important to know.  \n",
     "If you'd like to know more I recommend doing the [async expert](https://asyncexpert.com) course.  \n",
     "\n",
-    "So how does that look functionally?  \n",
-    "<div>\n",
-    "    <figure style=\"margin: 0;\">\n",
-    "        <iframe src=\"https://docs.google.com/viewer? \n",
-    "            url=https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf&embedded=true\"\n",
-    "            frameborder=\"0\" alt=\"IO completion port example\" \n",
-    "            width=\"561\" height=\"396.5\">\n",
-    "        </iframe>\n",
-    "        <figcaption>\n",
-    "            Source: <a href=\"https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf\">https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf</a>\n",
-    "        </figcaption>\n",
-    "    </figure>\n",
-    "</div>\n",
-    "\n",
-    "As this example illustrates, your task doesn't really spawn any new threads when using IO, it just schedules it to continue at a later stage.  \n",
-    "And it doesn't care on which thread this happens.  "
+    "So how does that look functionally?  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600\"\n",
+       "            height=\"400\"\n",
+       "            src=\"https://docs.google.com/viewer?url=https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf&embedded=true\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x16b3152cdf0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "IFrame(\"https://docs.google.com/viewer?url=https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf&embedded=true\", width=600, height=400)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Source: https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf\n",
+    "\n",
+    "As this example illustrates, your task doesn't really spawn any new threads when using IO, it just schedules it to continue at a later stage.  \n",
+    "And it doesn't care on which thread this happens.  "
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ee1a971f2df846a446e9cd328d195b99417b541d86415547fa298e7b23825ee5"
+  },
   "kernelspec": {
    "display_name": ".NET (C#)",
-   "language": "C#",
-   "name": ".net-csharp"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": "C#"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.11"
   },
   "orig_nbformat": 4
  },
