Attempting magic cell

--- a/books/5. Threading.ipynb
+++ b/books/5. Threading.ipynb
@@ -33,43 +33,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"600\"\n",
-       "            height=\"400\"\n",
-       "            src=\"https://docs.google.com/viewer?url=https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf&embedded=true\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
+       "<figure>\n",
+       "    <iframe \n",
+       "        src=\"https://docs.google.com/viewer?url=https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf&embedded=true\" \n",
+       "        width=\"600\", height=\"400\"\n",
+       "    ></iframe>\n",
+       "    <figcaption>\n",
+       "        Source: <a href=\"https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf\">https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf</a>\n",
+       "    <figcaption>\n",
+       "<figure>\n"
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x16b3152cdf0>"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame(\"https://docs.google.com/viewer?url=https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf&embedded=true\", width=600, height=400)"
+    "%%HTML\n",
+    "<figure>\n",
+    "    <iframe \n",
+    "        src=\"https://docs.google.com/viewer?url=https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf&embedded=true\" \n",
+    "        width=\"600\", height=\"400\"\n",
+    "    ></iframe>\n",
+    "    <figcaption>\n",
+    "        Source: <a href=\"https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf\">https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf</a>\n",
+    "    <figcaption>\n",
+    "<figure>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Source: https://goodies.dotnetos.org/files/dotnetos-async_thereisnothread.pdf\n",
-    "\n",
     "As this example illustrates, your task doesn't really spawn any new threads when using IO, it just schedules it to continue at a later stage.  \n",
     "And it doesn't care on which thread this happens.  "
    ]
