--- a/books/1. Terminology.ipynb
+++ b/books/1. Terminology.ipynb
@@ -6,11 +6,15 @@
    "source": [
     "# Async terminology\n",
     "\n",
+    "This chapter is just to illustrate the difference between the following terms:\n",
+    "\n",
     "- **Concurrency**\n",
     "- **Parallelism** \n",
     "- **Asynchrony**\n",
     "- **Multi-threading** & Multiprocessing\n",
     "\n",
+    "They get used incorrectly and it gets confusing from time to time, so it's important that we define the terminology first.  \n",
+    "When everyone means the same thing when they say a term, it's easier to understand each other.\n",
     "\n",
     "## Concurrency\n",
     "> the fact of two or more events or circumstances happening or existing at the same time.\n",
