--- a/books/2. TS async Promise example.ipynb
+++ b/books/2. TS async Promise example.ipynb
@@ -6,6 +6,9 @@
             "source": [
                 "# Async C# visualized with TS\n",
                 "\n",
+                "To get you started, you need to wrap your head around what `async` does.  \n",
+                "To do so, I found it's easiest to imagine `Task` to behave like JavaScript.  \n",
+                "\n",
                 "JavaScript has a similar thing to C#'s `Task<T>` and it's called a `Promise<T>`.  \n",
                 "The technical implementation is very different however, we can use this `Promise` as an example to show how async functionally operates."
             ]
