--- a/books/3. Lowering and state-machines.ipynb
+++ b/books/3. Lowering and state-machines.ipynb
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's a log going on around this so let's zoom in on the `MoveNext()`.  \n",
+    "There's a lot going on around this so let's zoom in on the `MoveNext()`.  \n",
     "We gave it 3 values, and the compiler generates a switch statement with 4 cases,   \n",
     "1 for each int, and a last one with a state to indicate we're at the end of the collection."
    ]
