--- a/books/6. Async Eliding.ipynb
+++ b/books/6. Async Eliding.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Miscellaneous \n",
-    "\n",
-    "Some topics don't need an entire chapter but are still worth discussing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Async Eliding\n",
+    "# Async Eliding\n",
     "\n",
     "Async eliding is where you don't await a task but pass it through as a return value.  \n",
     "https://blog.stephencleary.com/2016/12/eliding-async-await.html  \n",
